--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -84,8 +84,7 @@
                           {% if current_user %}
                             <div class="dropdown">
                               <button class="btn btn-sm btn-outline-secondary border-0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="fas fa-ellipsis-v me-1"></i>
-                                选项
+                                <i class="fas fa-ellipsis-v me-1"></i>选项
                               </button>
                               <ul class="dropdown-menu dropdown-menu-end">
                                 <li>
