--- a/templates/profile/projects.html
+++ b/templates/profile/projects.html
@@ -1,7 +1,7 @@
 <!-- 所有项目 -->
 <div class="card mb-4">
   <div class="card-header d-flex justify-content-between align-items-center">
-    <h5 class="mb-0"><i class="fas fa-folder"></i> 所有项目</h5>
+    <h5 class="mb-0" id="Projects"><i class="fas fa-folder"></i> 所有项目</h5>
     {% if current_user == user %}
       <button class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#addProjectModal"><i class="fas fa-plus"></i> 添加项目</button>
     {% endif %}
