--- a/templates/profile.html
+++ b/templates/profile.html
@@ -121,9 +121,7 @@
                   <i class="fas fa-project-diagram profile-nav-icon"></i>
                   <span class="profile-nav-text">项目</span>
                 </a>
-                <span class="me-2">
-                  <i class="fas fa-angle-right profile-nav-icon"></i>
-                </span>
+                <span class="me-2"><i class="fas fa-angle-right profile-nav-icon"></i></span>
               </li>
 
               <li class="list-group-item profile-nav-item">
@@ -131,9 +129,7 @@
                   <i class="fas fa-chart-area profile-nav-icon"></i>
                   <span class="profile-nav-text">贡献墙</span>
                 </a>
-                <span class="me-2">
-                  <i class="fas fa-angle-right profile-nav-icon"></i>
-                </span>
+                <span class="me-2"><i class="fas fa-angle-right profile-nav-icon"></i></span>
               </li>
 
               <li class="list-group-item profile-nav-item active">
@@ -141,9 +137,7 @@
                   <i class="fas fa-medal profile-nav-icon"></i>
                   <span class="profile-nav-text">里程碑</span>
                 </a>
-                <span class="me-2">
-                  <i class="fas fa-angle-right profile-nav-icon"></i>
-                </span>
+                <span class="me-2"><i class="fas fa-angle-right profile-nav-icon"></i></span>
               </li>
 
               <li class="list-group-item profile-nav-item">
@@ -151,9 +145,7 @@
                   <i class="fas fa-cog profile-nav-icon"></i>
                   <span class="profile-nav-text">设置</span>
                 </a>
-                <span class="me-2">
-                  <i class="fas fa-external-link-alt profile-nav-icon"></i>
-                </span>
+                <span class="me-2"><i class="fas fa-external-link-alt profile-nav-icon"></i></span>
               </li>
             </ul>
           </div>
