--- a/templates/profile.html
+++ b/templates/profile.html
@@ -113,7 +113,7 @@
         </div>
 
         <div class="card">
-          <div class="card-body p-0">
+          <div class="card-body px-0 py-2">
             <!-- 四个按钮: 项目(projects), 贡献墙(contributions), 里程碑(achievements), 设置(settings) -->
             <ul class="list-group list-group-flush">
               <li class="list-group-item profile-nav-item">
@@ -140,13 +140,15 @@
                 <span class="me-2"><i class="fas fa-angle-right profile-nav-icon"></i></span>
               </li>
 
-              <li class="list-group-item profile-nav-item">
-                <a href="#Settings" class="profile-nav-link ms-2">
-                  <i class="fas fa-cog profile-nav-icon"></i>
-                  <span class="profile-nav-text">设置</span>
-                </a>
-                <span class="me-2"><i class="fas fa-external-link-alt profile-nav-icon"></i></span>
-              </li>
+              {% if current_user == user %}
+                <li class="list-group-item profile-nav-item">
+                  <a href="#Settings" class="profile-nav-link ms-2">
+                    <i class="fas fa-cog profile-nav-icon"></i>
+                    <span class="profile-nav-text">设置</span>
+                  </a>
+                  <span class="me-2"><i class="fas fa-external-link-alt profile-nav-icon"></i></span>
+                </li>
+              {% endif %}
             </ul>
           </div>
         </div>
