--- a/templates/register.html
+++ b/templates/register.html
@@ -134,11 +134,10 @@
                   <label for="password" class="form-label">密码</label>
                   <div class="input-group">
                     <input type="password" class="form-control" id="password" name="password" required />
-                    <button class="btn btn-outline-secondary" type="button" id="togglePassword"><i class="fas fa-eye"></i></button>
+                    <button class="btn btn-outline-primary" type="button" id="togglePassword" style="width: 3em;"><i class="fas fa-eye"></i></button>
                   </div>
                   <div class="mt-2">
-                    <div class="progress" style="height: 4px;
-                                background-color: var(--github-border)">
+                    <div class="progress" style="height: 4px; background-color: var(--github-border)">
                       <div id="passwordStrength" class="progress-bar" role="progressbar"></div>
                     </div>
                     <small id="passwordStrengthText" class="form-text">密码强度: 未设置</small>
