--- a/templates/profile.html
+++ b/templates/profile.html
@@ -113,42 +113,57 @@
         </div>
 
         <div class="card">
-          <div class="card-body px-0 py-2">
-            <!-- 四个按钮: 项目(projects), 贡献墙(contributions), 里程碑(achievements), 设置(settings) -->
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item profile-nav-item">
-                <a href="#Projects" class="profile-nav-link ms-2">
-                  <i class="fas fa-project-diagram profile-nav-icon"></i>
-                  <span class="profile-nav-text">项目</span>
-                </a>
-                <span class="me-2"><i class="fas fa-angle-right profile-nav-icon"></i></span>
-              </li>
-
-              <li class="list-group-item profile-nav-item">
-                <a href="#Contributions" class="profile-nav-link ms-2">
-                  <i class="fas fa-chart-area profile-nav-icon"></i>
-                  <span class="profile-nav-text">贡献墙</span>
-                </a>
-                <span class="me-2"><i class="fas fa-angle-right profile-nav-icon"></i></span>
-              </li>
-
-              <li class="list-group-item profile-nav-item active">
-                <a href="#Achievements" class="profile-nav-link ms-2">
-                  <i class="fas fa-medal profile-nav-icon"></i>
-                  <span class="profile-nav-text">里程碑</span>
-                </a>
-                <span class="me-2"><i class="fas fa-angle-right profile-nav-icon"></i></span>
-              </li>
-
+          <div class="card-body p-0">
+            <ul class="list-group">
               {% if current_user == user %}
                 <li class="list-group-item profile-nav-item">
-                  <a href="#Settings" class="profile-nav-link ms-2">
-                    <i class="fas fa-cog profile-nav-icon"></i>
-                    <span class="profile-nav-text">设置</span>
+                  <a href="#Settings" class="profile-nav-link">
+                    <section style="width: 5em;">
+                      <i class="fas fa-cog me-2"></i>
+                      <span class="profile-nav-text">设置</span>
+                    </section>
+                    <section class="d-flex justify-content-center" style="width: 2em;">
+                      <i class="fas fa-external-link-alt"></i>
+                    </section>
                   </a>
-                  <span class="me-2"><i class="fas fa-external-link-alt profile-nav-icon"></i></span>
                 </li>
               {% endif %}
+
+              <li class="list-group-item profile-nav-item">
+                <a href="#Projects" class="profile-nav-link">
+                  <section style="width: 5em;">
+                    <i class="fas fa-project-diagram me-2"></i>
+                    <span class="profile-nav-text">项目</span>
+                  </section>
+                  <section class="d-flex justify-content-center" style="width: 2em;">
+                    <i class="fas fa-angle-right"></i>
+                  </section>
+                </a>
+              </li>
+
+              <li class="list-group-item profile-nav-item">
+                <a href="#Contributions" class="profile-nav-link">
+                  <section style="width: 5em;">
+                    <i class="fas fa-chart-area me-2"></i>
+                    <span class="profile-nav-text">贡献墙</span>
+                  </section>
+                  <section class="d-flex justify-content-center" style="width: 2em;">
+                    <i class="fas fa-angle-right"></i>
+                  </section>
+                </a>
+              </li>
+
+              <li class="list-group-item profile-nav-item">
+                <a href="#Achievements" class="profile-nav-link">
+                  <section style="width: 5em;">
+                    <i class="fas fa-medal me-2"></i>
+                    <span class="profile-nav-text">里程碑</span>
+                  </section>
+                  <section class="d-flex justify-content-center" style="width: 2em;">
+                    <i class="fas fa-angle-right"></i>
+                  </section>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
@@ -193,7 +208,7 @@
           <!-- - -->
         </div>
 
-        <!-- TODO: 三选一渲染 -->
+        <!-- 三选一渲染 -->
         <!-- 项目 -->
         <div id="profile-projects-content" class="profile-content">
           {% include 'profile/projects.html' %}
