--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  JueFire Studio - 登录
+  JuFire Studio - 登录
 {% endblock %}
 
 {% block required_css %}
