--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  JueFire Studio - 首页
+  JuFire Studio - 首页
 {% endblock %}
 
 {% block required_css %}
