--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  JueFire Studio - 注册
+  JuFire Studio - 注册
 {% endblock %}
 
 {% block required_css %}
