--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,10 +1,6 @@
-{% extends 'base.html' %}
-
-{% block title %}
+{% extends 'base.html' %} {% block title %}
   个人主页 - {{ user.username }}
-{% endblock %}
-
-{% block required_css %}
+{% endblock %} {% block required_css %}
   <link href="{{ url_for('static', filename='css/card.css') }}" rel="stylesheet" />
   <link href="{{ url_for('static', filename='css/button.css') }}" rel="stylesheet" />
   <link href="{{ url_for('static', filename='css/modal.css') }}" rel="stylesheet" />
@@ -12,9 +8,7 @@
   <link href="{{ url_for('static', filename='css/badge.css') }}" rel="stylesheet" />
   <link href="{{ url_for('static', filename='css/profile/GreenWall.css') }}" rel="stylesheet" />
   <link href="{{ url_for('static', filename='css/profile/navigation.css') }}" rel="stylesheet" />
-{% endblock %}
-
-{% block extra_css %}
+{% endblock %} {% block extra_css %}
   <style>
     #choose_avatar_btn {
       bottom: 0;
@@ -46,9 +40,7 @@
       animation: fadeIn 0.3s ease-in-out forwards;
     }
   </style>
-{% endblock %}
-
-{% block content %}
+{% endblock %} {% block content %}
   <div class="container mt-4">
     <!-- 用户信息卡片 -->
     <div class="row">
@@ -62,8 +54,7 @@
                   <img src="{{ url_for('auth.user_avatar', filename=user.avatar_path) }}" class="rounded-circle" style="width: 120px; height: 120px; object-fit: cover" />
                 {% else %}
                   <i class="fas fa-user-circle" style="font-size: 120px; color: var(--github-accent)"></i>
-                {% endif %}
-                {% if current_user == user %}
+                {% endif %} {% if current_user == user %}
                   <button type="button" id="choose_avatar_btn" class="btn btn-sm btn-primary position-absolute rounded-circle" data-bs-toggle="modal" data-bs-target="#avatarModal"><i class="fas fa-camera"></i></button>
                 {% endif %}
               </div>
@@ -97,7 +88,7 @@
             <!-- 用户邮箱 -->
             <div class="mt-3 d-flex justify-content-start align-items-center">
               <p class="card-text">
-                <i class="fas fa-envelope ms-4 me-2" style="font-size: 0.8em; color: var(--github-border);"></i>
+                <i class="fas fa-envelope ms-4 me-2" style="font-size: 0.8em; color: var(--github-border)"></i>
                 <small class="text-muted">{{ user.email }}</small>
               </p>
             </div>
@@ -105,68 +96,14 @@
             <!-- 用户注册时间 -->
             <div class="mt-2 d-flex justify-content-start align-items-center">
               <p class="card-text">
-                <i class="fas fa-calendar ms-4 me-2" style="font-size: 0.8em; color: var(--github-border);"></i>
+                <i class="fas fa-calendar ms-4 me-2" style="font-size: 0.8em; color: var(--github-border)"></i>
                 <small class="text-muted">注册于 {{ user.created_at|format_datetime }}</small>
               </p>
             </div>
           </div>
         </div>
-
-        <div class="card">
-          <div class="card-body p-0">
-            <ul class="list-group">
-              {% if current_user == user %}
-                <li class="list-group-item profile-nav-item">
-                  <a href="#Settings" class="profile-nav-link">
-                    <section style="width: 5em;">
-                      <i class="fas fa-cog me-2"></i>
-                      <span class="profile-nav-text">设置</span>
-                    </section>
-                    <section class="d-flex justify-content-center" style="width: 2em;">
-                      <i class="fas fa-external-link-alt"></i>
-                    </section>
-                  </a>
-                </li>
-              {% endif %}
-
-              <li class="list-group-item profile-nav-item">
-                <a href="#Projects" class="profile-nav-link">
-                  <section style="width: 5em;">
-                    <i class="fas fa-project-diagram me-2"></i>
-                    <span class="profile-nav-text">项目</span>
-                  </section>
-                  <section class="d-flex justify-content-center" style="width: 2em;">
-                    <i class="fas fa-angle-right"></i>
-                  </section>
-                </a>
-              </li>
-
-              <li class="list-group-item profile-nav-item">
-                <a href="#Contributions" class="profile-nav-link">
-                  <section style="width: 5em;">
-                    <i class="fas fa-chart-area me-2"></i>
-                    <span class="profile-nav-text">贡献墙</span>
-                  </section>
-                  <section class="d-flex justify-content-center" style="width: 2em;">
-                    <i class="fas fa-angle-right"></i>
-                  </section>
-                </a>
-              </li>
-
-              <li class="list-group-item profile-nav-item">
-                <a href="#Achievements" class="profile-nav-link">
-                  <section style="width: 5em;">
-                    <i class="fas fa-medal me-2"></i>
-                    <span class="profile-nav-text">里程碑</span>
-                  </section>
-                  <section class="d-flex justify-content-center" style="width: 2em;">
-                    <i class="fas fa-angle-right"></i>
-                  </section>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
+        <!-- 成就墙 -->
+        {% include 'profile/achievements.html' %}
       </div>
 
       <!-- 主要内容区域 -->
@@ -208,34 +145,20 @@
           <!-- - -->
         </div>
 
-        <!-- 三选一渲染 -->
-        <!-- 项目 -->
-        <div id="profile-projects-content" class="profile-content">
-          {% include 'profile/projects.html' %}
-        </div>
-
         <!-- 贡献墙 -->
-        <div id="profile-contributions-content" class="profile-content">
-          {% include 'profile/green_wall.html' %}
-        </div>
+        {% include 'profile/green_wall.html' %}
 
-        <!-- 成就墙 -->
-        <div id="profile-achievements-content" class="profile-content">
-          {% include 'profile/achievements.html' %}
-        </div>
+        <!-- 项目 -->
+        {% include 'profile/projects.html' %}
       </div>
     </div>
   </div>
 
   <!-- 引入模态框 -->
-  {% include 'modals/addProjectModal.html' %}
-  {% include 'modals/editProjectModal.html' %}
-  {% include 'modals/editAvatarModal.html' %}
+  {% include 'modals/addProjectModal.html' %} {% include 'modals/editProjectModal.html' %} {% include 'modals/editAvatarModal.html' %}
 
   <!-- - -->
-{% endblock %}
-
-{% block extra_js %}
+{% endblock %} {% block extra_js %}
   <!-- 引入Cropper.js库 -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css" rel="stylesheet" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
@@ -243,5 +166,5 @@
   <!-- 引入自定义JS -->
   <script src="{{ url_for('static', filename='js/cropper.js') }}"></script>
   <script src="{{ url_for('static', filename='js/profile.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/profile/navigation.js') }}"></script>
+  <!-- <script src="{{ url_for('static', filename='js/profile/navigation.js') }}"></script> -->
 {% endblock %}
