--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
       }
     </style>
 
+    <link rel="icon" href="{{ url_for('static', filename='img/logo.svg') }}" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet" />
