--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -167,8 +167,7 @@
         <div class="col-12">
           <div class="text-center py-5">
             <div class="mb-4">
-              <i class="fas fa-compass" style="font-size: 4rem;
-                        color: var(--bs-secondary)"></i>
+              <i class="fas fa-compass" style="font-size: 4rem; color: var(--bs-secondary)"></i>
             </div>
             <h3 class="text-muted mb-3">暂无导航分类</h3>
             <p class="text-muted mb-4">还没有任何导航分类，快来添加第一个吧！</p>
