--- a/templates/register.html
+++ b/templates/register.html
@@ -174,9 +174,7 @@
             </div>
 
             <!-- 第二步：个人资料 -->
-            <div id="step2" class="step-container" style="flex: 1;
-                  display: flex;
-                        flex-direction: column">
+            <div id="step2" class="step-container" style="flex: 1; display: flex; flex-direction: column">
               <div class="card-body" style="overflow-y: auto;">
                 <!-- 头像上传 -->
                 <div class="text-center mb-4">
