--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,10 @@
-{% extends 'base.html' %} {% block title %}
+{% extends 'base.html' %}
+
+{% block title %}
   个人主页 - {{ user.username }}
-{% endblock %} {% block required_css %}
+{% endblock %}
+
+{% block required_css %}
   <link href="{{ url_for('static', filename='css/card.css') }}" rel="stylesheet" />
   <link href="{{ url_for('static', filename='css/button.css') }}" rel="stylesheet" />
   <link href="{{ url_for('static', filename='css/modal.css') }}" rel="stylesheet" />
@@ -8,7 +12,9 @@
   <link href="{{ url_for('static', filename='css/badge.css') }}" rel="stylesheet" />
   <link href="{{ url_for('static', filename='css/profile/GreenWall.css') }}" rel="stylesheet" />
   <link href="{{ url_for('static', filename='css/profile/navigation.css') }}" rel="stylesheet" />
-{% endblock %} {% block extra_css %}
+{% endblock %}
+
+{% block extra_css %}
   <style>
     #choose_avatar_btn {
       bottom: 0;
@@ -40,7 +46,9 @@
       animation: fadeIn 0.3s ease-in-out forwards;
     }
   </style>
-{% endblock %} {% block content %}
+{% endblock %}
+
+{% block content %}
   <div class="container mt-4">
     <!-- 用户信息卡片 -->
     <div class="row">
@@ -54,7 +62,9 @@
                   <img src="{{ url_for('auth.user_avatar', filename=user.avatar_path) }}" class="rounded-circle" style="width: 120px; height: 120px; object-fit: cover" />
                 {% else %}
                   <i class="fas fa-user-circle" style="font-size: 120px; color: var(--github-accent)"></i>
-                {% endif %} {% if current_user == user %}
+                {% endif %}
+
+                {% if current_user == user %}
                   <button type="button" id="choose_avatar_btn" class="btn btn-sm btn-primary position-absolute rounded-circle" data-bs-toggle="modal" data-bs-target="#avatarModal"><i class="fas fa-camera"></i></button>
                 {% endif %}
               </div>
@@ -155,10 +165,14 @@
   </div>
 
   <!-- 引入模态框 -->
-  {% include 'modals/addProjectModal.html' %} {% include 'modals/editProjectModal.html' %} {% include 'modals/editAvatarModal.html' %}
+  {% include 'modals/addProjectModal.html' %}
+  {% include 'modals/editProjectModal.html' %}
+  {% include 'modals/editAvatarModal.html' %}
 
   <!-- - -->
-{% endblock %} {% block extra_js %}
+{% endblock %}
+
+{% block extra_js %}
   <!-- 引入Cropper.js库 -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css" rel="stylesheet" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
@@ -166,5 +180,4 @@
   <!-- 引入自定义JS -->
   <script src="{{ url_for('static', filename='js/cropper.js') }}"></script>
   <script src="{{ url_for('static', filename='js/profile.js') }}"></script>
-  <!-- <script src="{{ url_for('static', filename='js/profile/navigation.js') }}"></script> -->
 {% endblock %}
