--- a/templates/project_docs_list.html
+++ b/templates/project_docs_list.html
@@ -1,13 +1,19 @@
-{% extends 'base.html' %} {% block title %}
+{% extends 'base.html' %}
+
+{% block title %}
   文档列表 - {{ project.title }}
-{% endblock %} {% block required_css %}
+{% endblock %}
+
+{% block required_css %}
   <link href="{{ url_for('static', filename='css/card.css') }}" rel="stylesheet" />
   <link href="{{ url_for('static', filename='css/modal.css') }}" rel="stylesheet" />
   <link href="{{ url_for('static', filename='css/button.css') }}" rel="stylesheet" />
   <link href="{{ url_for('static', filename='css/form.css') }}" rel="stylesheet" />
   <link href="{{ url_for('static', filename='css/table.css') }}" rel="stylesheet" />
   <link href="{{ url_for('static', filename='css/badge.css') }}" rel="stylesheet" />
-{% endblock %} {% block extra_css %}
+{% endblock %}
+
+{% block extra_css %}
   <style>
     .doc-icon {
       color: var(--github-accent);
@@ -42,7 +48,9 @@
       opacity: 0.7;
     }
   </style>
-{% endblock %} {% block content %}
+{% endblock %}
+
+{% block content %}
   <div class="container mt-4">
     <div class="row mb-4">
       <div class="col-12">
@@ -266,9 +274,13 @@
   <!-- 引入模态框 -->
 
   {% if current_user.id == project.author_id %}
-    {% include 'modals/addDocModal.html' %} {% include 'modals/uploadDocModal.html' %} {% include 'modals/editDocModal.html' %}
+    {% include 'modals/addDocModal.html' %}
+    {% include 'modals/uploadDocModal.html' %}
+    {% include 'modals/editDocModal.html' %}
   {% endif %}
   <!-- - -->
-{% endblock %} {% block extra_js %}
+{% endblock %}
+
+{% block extra_js %}
   <script src="{{ url_for('static', filename='js/project_docs.js') }}"></script>
 {% endblock %}
