--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -234,7 +234,7 @@
                           {% else %}
                             <button class="btn btn-outline-warning toggle-user-status" data-user-id="{{ user.id }}" data-is-active="{{ user.is_active }}" title="解封用户"><i class="fas fa-check"></i></button>
                           {% endif %}
-                          <a href="{{ url_for('auth.profile', username=user.username) }}" class="btn btn-outline-info view-user-details" data-user-id="{{ user.id }}" title="查看详情"><i class="fas fa-eye"></i></a>
+                          <a href="{{ url_for('auth.profile', user_id=user.id) }}" class="btn btn-outline-info view-user-details" data-user-id="{{ user.id }}" title="查看详情"><i class="fas fa-eye"></i></a>
                           <button class="btn btn-outline-danger delete-user" data-user-id="{{ user.id }}" title="删除用户"><i class="fas fa-trash"></i></button>
                         {% else %}
                           <span class="status-badge status-current"><i class="fas fa-user me-1"></i> 当前用户</span>
