--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -122,7 +122,7 @@
                       <div class="card-footer">
                         <!-- 导航项创建者 -->
                         <div class="d-flex justify-content-between align-items-center">
-                          <a class="nav-link" id="profile_link" href="{{ url_for('auth.profile', username=item.creator.username) }}">
+                          <a class="nav-link" id="profile_link" href="{{ url_for('auth.profile', user_id=item.creator.id) }}">
                             <div id="user_tag" class="me-1">
                               {% if item.creator and item.creator.avatar_path %}
                                 <img id="user_avatar_img" src="{{ url_for('auth.user_avatar', filename=item.creator.avatar_path) }}" />
