--- a/static/css/button.css
+++ b/static/css/button.css
@@ -1,12 +1,12 @@
 /* 按钮 */
 .btn-primary {
-    background-color: var(--github-accent);
-    border-color: var(--github-accent);
+    background-color: var(--github-primary);
+    border-color: var(--github-primary);
 }
 
 .btn-primary:hover {
-    background-color: #4493f8;
-    border-color: #4493f8;
+    background-color: var(--github-accent);
+    border-color: var(--github-accent);
 }
 
 .btn-success {
@@ -51,11 +51,11 @@
     color: var(--github-accent);
 }
 
+/* 自定义关闭按钮样式 */
 .btn-close {
     filter: invert(1) grayscale(100%) brightness(200%);
 }
 
-/* 自定义关闭按钮样式 */
 .btn-close.custom-close {
     background: transparent url("../img/close.svg") center/1em auto no-repeat;
     opacity: 0.8;
