--- a/templates/base.html
+++ b/templates/base.html
@@ -183,9 +183,7 @@
 
           {% if current_user %}
             <ul class="navbar-account">
-              <li class="nav-item" style="display: flex;
-                  align-items: center;
-                         margin: 0 5px">
+              <li class="nav-item" style="display: flex; align-items: center; margin: 0 5px">
                 <a class="nav-link" id="profile_link" href="{{ url_for('auth.profile', user_id=session.user_id) }}">
                   <div id="user_tag">
                     {% if current_user.avatar_path %}
