feat(projects): 重构项目模块并添加新功能
- 重构项目模板结构，将相关模板移至project子目录
- 添加项目列表和详情页面
- 优化导航栏，添加项目入口
- 改进项目文档功能，支持图片相对路径处理
- 修复项目文档列表和查看页面的样式问题

--- a/templates/base.html
+++ b/templates/base.html
@@ -134,17 +134,14 @@
 
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav me-auto">
-            <!-- 游客可见 -->
-
-            <li class="nav-item" style="margin: 0 5px">
-              <a class="nav-link" href="{{ url_for('index') }}">首页</a>
-            </li>
-
             <!-- 成员可见 -->
-
             {% if current_user and current_user.role >= 1 %}
               <li class="nav-item" style="margin: 0 5px">
                 <a class="nav-link" href="{{ url_for('navigation.navigation') }}">导航</a>
+              </li>
+
+              <li class="nav-item" style="margin: 0 5px">
+                <a class="nav-link" href="{{ url_for('projects.projects') }}">项目</a>
               </li>
 
               <li class="nav-item" style="margin: 0 5px">
@@ -153,7 +150,6 @@
             {% endif %}
 
             <!-- 管理员可见 -->
-
             {% if current_user and current_user.role >= 2 %}
               <li class="nav-item dropdown" style="margin: 0 5px">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">管理</a>
